# FTML

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  poly.py  pyproject.toml  requirements.txt  todo.txt
FTML/Exercises/: Exercices_5_data.npy  Exercices_5_pca.py
FTML/FTML/: FTML.aux  FTML.bbl  FTML.blg  FTML.fdb_latexmk  FTML.fls  FTML.out  FTML.tex  FTML.toc
FTML/lecture notes/: lecture notes.aux  lecture notes.bbl  lecture notes.blg  lecture notes.fdb_latexmk  lecture notes.fls  lecture notes.out  lecture notes.tex  lecture notes.toc
PTML/TP1/: TP_1_matplotlib_demo.py  TP_1_numpy_demo.ipynb  TP_1_ols.py  TP_1_ols_solution.py  TP_1_pandas_demo.ipynb  generate_X.py
PTML/TP2/: TP_2_logistic_regression.py  TP_2_logistic_regression_solution.py  TP_2_ridge_cross_validation.py  TP_2_ridge_regression.py  TP_2_ridge_regression_solution.py  generate_design_matrix.py  generate_gaussian_data.py
PTML/TP3/: TP_3_GD_convex.py  TP_3_GD_strongly_convex.py  TP_3_GD_strongly_convex_line_search.py  TP_3_GD_strongly_convex_ridge.py  TP_3_utils.py  generate_data.py
PTML/TP4/: TP4_LR.py  TP4_LR_utils.py  TP4_algorithms.py  TP4_heavy_ball.py  TP_4_GD_strongly_convex_heavy_ball.py  TP_4_utils.py  dgenerate_gaussian_data.py  generate_data.py  (+3 more)
exercises/: Exercices_5_data.npy  exercice_5_solution.py
lecture_notes/: lecture notes.aux  lecture notes.blg  lecture notes.fdb_latexmk  lecture notes.fls  lecture notes.out  lecture notes.tex  lecture notes.toc
practical_sessions/: pyrightconfig.json  requirements.txt  tp8_nn_ridge
simulations/: requirements.txt
(+561 files in other folders)
