[project]
name = "github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb>=0.13.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "snakeviz>=2.2.2",
    "termcolor>=3.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]
